<resources>
    <string name="app_name">Score Keeper</string>
    <string name="Reset_Button">Reset</string>
    <string name="add_six">+6</string>
    <string name="add_four">+4</string>
    <string name="add_three">+3</string>
    <string name="add_two">+2</string>
    <string name="add_one">+1</string>
    <string name="score_default">0</string>
    <string name="team_b">TEAM B</string>
    <string name="team_a">TEAM A</string>
    <string name="print_score">%1$d</string>
    <string name="new_match">NEW MATCH</string>
    <string name="next">NEXT</string>
    <string name="overs">Overs</string>
    <string name="venue">Venue</string>
    <string name="toss_won_by">Toss Won By</string>
    <string name="batting_team_name">Batting Team Name</string>
    <string name="tournament">Tournament</string>
    <string name="bowling_team_name">Bowling Team Name</string>
    <string name="batman_1_name">Batman 1 Name</string>
    <string name="batman_2_name">Batman 2 Name</string>
    <string name="bowler_name">Bowler Name</string>
    <string name="a">A</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="w">W</string>
    <string name="_0_0">0/0</string>
    <string name="_0_0_10">(0.0/10)</string>
    <string name="bowler">BOWLER</string>
    <string name="batsman">BATSMAN</string>
    <string name="bowlername">BowlerName</string>
    <string name="_0_00">0(0)</string>
    <string name="_0_000">(0.0)</string>
    <string name="india">INDIA</string>
    <string name="x">X</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="b">B</string>
    <string name="_0">0</string>
    <string name="extras">EXTRAS</string>
    <string name="ok">OK</string>
    <string name="new_player_name">New Player Name</string>
    <string name="suraj">Suraj</string>
    <string name="arun">Arun</string>
    <string name="bowler_string">%1$d(%2$d )</string>
    <string name="playerA_string">%1$d(%2$d )</string>
    <string name="playerB_string">%1$d(%2$d )</string>
    <string name="new_bowler_name">New Bowler Name</string>
    <string name="exit">Are you really want to exit ?</string>

</resources>
