<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfe0ed"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/tournament_view"
                style="@style/editText_detai1"
                android:layout_marginTop="@dimen/_46"
                android:drawablePadding="@dimen/_80dp"
                android:drawableStart="@drawable/trophy"
                android:hint="@string/tournament"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/battn_view"
                style="@style/editText_detai1"
                android:drawablePadding="@dimen/_50dp"
                android:drawableStart="@drawable/bat"
                android:hint="@string/batting_team_name"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/bowtn_view"
                style="@style/editText_detai1"
                android:drawablePadding="@dimen/_50dp"
                android:drawableStart="@drawable/ball"
                android:hint="@string/bowling_team_name"
                android:inputType="text"
                android:textAlignment="center"
                android:padding="10dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/batman1_view"
                style="@style/editText_detai1"
                android:drawablePadding="@dimen/_70dp"
                android:drawableStart="@drawable/helmet"
                android:hint="@string/batman_1_name"
                android:inputType="text"
                android:textAlignment="center"
                android:padding="10dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/batman2_view"
                style="@style/editText_detai1"
                android:drawablePadding="@dimen/_70dp"
                android:drawableStart="@drawable/helmet"
                android:hint="@string/batman_2_name"
                android:textAlignment="center"
                android:inputType="text"
                android:padding="10dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/bowler_view"
                style="@style/editText_detai1"
                android:drawablePadding="@dimen/_80dp"
                android:drawableStart="@drawable/over"
                android:hint="@string/bowler_name"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/shape4"
                android:onClick="open_activity_player"
                android:text="@string/next"
                android:textColor="@color/white"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>