<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfe0ed"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounter.MainActivity">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginRight="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:checked="true"
            android:text="@string/arun"
            android:textColor="#000000"
            android:textSize="@dimen/_12sp"
            android:textStyle="bold" />

        <RadioButton

            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="@dimen/_8dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/suraj"
            android:textColor="#000000"
            android:textSize="@dimen/_12sp"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:background="@drawable/shape_5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:text="@string/extras"

            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/extras_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/_5dp"
            android:text="@string/_0"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="change_bowler"
        android:text="@string/bowlername"
        android:textColor="#000000"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="change_bowler"
        android:src="@drawable/ic_arrow_drop_down_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:background="@drawable/shape_5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:text="@string/batsman"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:gravity="end"
            android:padding="@dimen/_5dp"
            android:text="@string/bowler"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/india"
        android:textSize="@dimen/_22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/_0_0"
        android:textColor="#000000"
        android:textSize="@dimen/_38dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape_extra"
        android:onClick="extra_run"
        android:text="@string/x"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_two"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_one"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape_wkt"
        android:onClick="wicket_taken"
        android:text="@string/w"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_three"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_six"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_five"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/shape4"
        android:onClick="add_four"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />


</android.support.constraint.ConstraintLayout>
